# uv-lock-report

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  action.yml  main.py  pyproject.toml  renovate.json  test_cli_install.py
.github/: copilot-instructions.md
.github/workflows/: lint.yaml  lockfile-report.yaml  release.yml  sample-lockfile-reports.yaml  test.yaml  typecheck.yaml  uv-lock-report.yaml
script/: test-action.py
uv_lock_report/: __init__.py  cli.py  models.py  report.py
uv_lock_report/tests/: conftest.py  test_lock_file_reporter.py  test_lockfile.py  test_lockfile_changes.py  test_updated_package.py
